--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,91 @@
+:root {
+    --altura-header: 70px;
+    --altura-footer: 40px;
+}
+
+html, body {
+    height: 100%;
+}
+
+body {
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+}
+
 .hide {
     display: none;
+}
+
+header {
+    height: var(--altura-header);
+    /* background-color: chartreuse; */
+}
+
+footer {
+    height: var(--altura-footer);
+    /* background-color: aqua; */
+}
+
+main {
+    min-height: calc(100% - (var(--altura-header) + var(--altura-footer)));
+    /* background-color: darksalmon; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#question {
+    background-color:white;
+    border-radius: 30px;
+    width: 70%;
+    min-height: 700px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#pregunta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 15px;
+    width: 100%;
+    flex: 0.75;
+}
+
+.respuesta {
+    border-radius: 50px;
+    margin: 1.25%;
+    width: 47.5%;
+    height: 100px;
+    font-size: 24px;
+    color: whitesmoke;
+    border: 0;
+    font-weight: bold;
+}
+
+.contenedor-respuestas-multiples {
+    width: 100%;
+}
+
+#pregunta-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.siguiente-pregunta {
+    width: 300px;
+    font-size: 20px;
+    height: 50px;
+}
+
+.respuesta-incorrecta {
+    opacity: 0.35;
 }
