se cambio fondo

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-    background-color: #4158D0;
+    background-color: #fa1111;
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 }
 
