--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 :root {
-    --altura-header: 70px;
-    --altura-footer: 40px;
+    --altura-header: 0px;
+    --altura-footer: 0px;
 }
 
 html, body {
     height: 100%;
+    
 }
 
 body {
@@ -32,6 +33,10 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.form-quiz {
+    width: 80%;
 }
 
 .question {
