--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ p {
     border-radius: 30px;
     width: 70%;
     min-height: 35vw;
-    padding: 40px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -151,6 +151,7 @@ p {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border-radius: 30px;
     min-height: 33vw;
     width: 100%;
 }
