--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Ribeye&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Life+Savers:wght@700&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
 
 :root {
     --altura-header: 0px;
@@ -42,7 +40,7 @@ main {
 
 .form-quiz {
 
-    font-family: 'Life Savers', cursive;
+    font-family: 'Comfortaa', cursive;
     font-size: 25px;
     text-align: center;
     width: 30%;
@@ -50,9 +48,9 @@ main {
 
 .btn-comenzar{
 
-     box-shadow: rgba(46, 237, 240, 0.4) 0px 5px, rgba(46, 240, 224, 0.66) 0px 10px, rgba(84, 241, 244, 0.2) 0px 15px, rgba(70, 231, 240, 0.1) 0px 20px, rgba(35, 109, 236, 0.05) 0px 25px;
+     box-shadow: rgba(0, 0, 0, 0.492) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; 
      font-family: 'Ribeye', cursive;
-     font-size: 25px;
+     font-size: 20px;
      background-color: rgba(53, 12, 143, 0.878);
      position: relative;
      display: inline-block;
@@ -63,8 +61,8 @@ main {
      transition: 0.2s;
      border-radius: 20px;
      cursor: pointer;
-     width: 200px;
      height: 50px;
+     
 
 }
 
@@ -76,6 +74,12 @@ main {
 
 }
 
+.botones-result {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    
+}
 
 .question {
     width: 100%;
@@ -106,11 +110,7 @@ p {
     width: 100%;
 }
 
-.botones-result {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
+
 
 .hqr-contenedor {
     background-color:white;
@@ -128,11 +128,13 @@ p {
 #pregunta {
     display: flex;
     flex-direction: column;
+    text-align: center;
     align-items: center;
     justify-content: space-around;
     gap: 15px;
     width: 100%;
     flex: 0.75;
+    font-family: 'Comfortaa', cursive;
 }
 
 .respuesta {
@@ -144,6 +146,7 @@ p {
     color: whitesmoke;
     border: 0;
     font-weight: bold;
+    
 }
 
 .home {
@@ -157,7 +160,7 @@ p {
 }
 
 .contenedor-respuestas-multiples {
-    font-family: 'Life Savers', cursive;
+    font-family: 'Comfortaa', cursive;
     font-size: 20px;
     width: 100%;
 
