--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,15 @@ main {
     gap: 5px;
 }
 
+.chart-legend-horizontal {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
 .graphics-data-container {
     margin-bottom: 20px;
 }
@@ -251,6 +260,19 @@ main {
 .mychart-container {
     width: 27%;
     align-self: center;
+}
+
+.mychart-container-bar {
+    width: 80%;
+    height: 23vh;
+    align-self: center;
+}
+
+.bar-container {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .color-label {
